# options

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  deploy-gcloud.sh  docker-compose.yml  iex.py  requirements.txt
options/: eda.py  iex.py  interative_brokers.py  load_to_firestore.py  load_to_sheets.py  polygon_util.py  schwab.py  td_ameritrade.py  util.py
options-rs/: Cargo.toml
options-rs/src/: api.rs  config.rs  lib.rs  main.rs  returns.rs  test_utils.rs  util.rs  utils.rs
options-rs/src/api/: auth.rs  chains.rs  mod.rs  options.http  quote.rs  quote_test_data.json  schwab.rs  server.rs  token_storage.rs
options-rs/src/api/test_data/: chains_test_data.json  quote_test_data.json
options-rs/src/daos/: chains.rs  mod.rs
options-rs/src/models/: company.rs  dividend.rs  mod.rs  options.rs  price.rs  returns.rs  schwab_returns.rs
options-rs/src/services/: dividend.rs  mod.rs
options/clients/: client.py  polygon.py
options/daos/daily/: test.py  update_chains.py  update_dividends.py  update_options.py  update_prices.py  update_quotes.py  update_returns.py
options/daos/weekly/: update_dividends.py
options/daos/yearly/: update_companies.py  update_universe.py
sql/: create_returns_table.sql  create_schemas.sql  create_tables.sql
tests/options/: test_util.py
