[package]
name = "options-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
csv = "1.1"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
