[package]
name = "options-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
csv = "1.1"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5" # For the web server
tokio = { version = "1.0", features = ["full"] }
oauth2 = "4.0"
once_cell = "1.19.0"
dirs = "5.0.1"
aes-gcm = "0.10.3"
base64 = "0.21.7"
